...
                        ),
                        shape = RoundedCornerShape(12.dp),
                        modifier = Modifier
                            .height(48.dp)
                            .fillMaxWidth()
                            .padding(end = 12.dp)
                            .semantics {testTag = "fullName"}
                    )

                    Spacer(Modifier.height(20.dp))
                    Text(
                        "Email",
                        fontSize = 18.sp,
...
                        ),
                        shape = RoundedCornerShape(12.dp),
                        modifier = Modifier
                            .height(48.dp)
                            .fillMaxWidth()
                            .padding(end = 12.dp)
                            .semantics {testTag = "email"}
                    )

                    Spacer(Modifier.height(20.dp))
                    Text(
                        "Phone Number",
                        fontSize = 18.sp,
...
                            }
                        },
                        modifier = Modifier
                            .fillMaxWidth()
                            .height(48.dp)
                            .padding(end = 12.dp)
                            .semantics {testTag = "password"}
                    )
                    Spacer(Modifier.height(20.dp))

                    Text(
                        "Confirm Password",
                        fontSize = 18.sp,
...
                                checked = checkbox,
                                onCheckedChange = {checkbox = it},
                                colors = CheckboxDefaults.colors(
                                    checkedColor = colorResource(R.color.greenshade),
                                    uncheckedColor = Color.White
                                ),
                                modifier = Modifier.semantics { testTag = "termsCheckbox" }

                            )
                        }
                    }
                    Spacer(Modifier.height(12.dp))
                    Button(
...
                            }
                        },
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(end = 12.dp)
                            .height(40.dp)
                            .semantics {testTag = "signupButton"}
                        ,
                        colors = ButtonDefaults.buttonColors(
                            containerColor = colorResource(R.color.greenshade),
                            contentColor = Color.Black
                        ),
                        shape = RoundedCornerShape(12.dp)
...
